# hackathon

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: grokGen.cpp.E9BC8D87BC5370DE.idx  test.cpp.F329193B308868B4.idx
finetune.coco/: README.dataset.txt  README.roboflow.txt
finetune.coco/test/: _annotations.coco.json
finetune.coco/train/: _annotations.coco.json
finetune.coco/valid/: _annotations.coco.json
src/: grokGen.cpp  test.cpp  testYolo.cpp  test_transformer.cpp
src/detection/: detector.cpp  detector.h
yolo/: data.yaml
yolo/labels/: download (1).txt  images (1).txt  images (2).txt  images (4).txt  images (5).txt  images (7).txt
yolo/labels/labels/: train.cache  val.cache
yolo/labels/labels/train/: download.txt  images (3).txt
yolo/labels/labels/val/: images (6).txt  images.txt
